# AI-Assistant

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
app/: __init__.py  assistant.py  config.py  desktop.py  main.py  memory.py  model.py
scripts/: run.sh  run_desktop.ps1  run_desktop.sh
static/: index.html
tests/: __init__.py  test_memory.py
